horizontal scrolling issue

--- a/less/home-page.less
+++ b/less/home-page.less
@@ -3,10 +3,10 @@ html {
   font-size: 62.5%;
 }
 
-.home {
+.container .home {
   width: 1000px;
   @media @phone {
-    width: 500px;
+    max-width: 500px;
   }
 
   .intro {
@@ -30,7 +30,7 @@ html {
           margin-left: 4%;
 
           @media @phone {
-            width: 100%;
+            max-width: 100%;
             margin-left: 0px;
           }
         }
